--- a/VoterBallot/src/voterBallot.fxml
+++ b/VoterBallot/src/voterBallot.fxml
@@ -36,17 +36,17 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <ComboBox fx:id="presidentDropdown" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                  <ComboBox fx:id="presidentDropdown" onAction="#setSelections" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </ComboBox>
-                  <ComboBox fx:id="usSenateDropdown" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                  <ComboBox fx:id="usSenateDropdown" onAction="#setSelections" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </ComboBox>
-                  <ComboBox fx:id="usHouseDropdown" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                  <ComboBox fx:id="usHouseDropdown" onAction="#setSelections" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
@@ -83,17 +83,17 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <ComboBox fx:id="governorDropdown" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                  <ComboBox fx:id="governorDropdown" onAction="#setSelections" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </ComboBox>
-                  <ComboBox fx:id="stateSenateDropdown" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                  <ComboBox fx:id="stateSenateDropdown" onAction="#setSelections" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </ComboBox>
-                  <ComboBox fx:id="stateHouseDropdown" layoutX="265.0" layoutY="58.0" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                  <ComboBox fx:id="stateHouseDropdown" layoutX="265.0" layoutY="58.0" onAction="#setSelections" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
@@ -124,12 +124,12 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <ComboBox fx:id="countyJudgeDropdown" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                  <ComboBox fx:id="countyJudgeDropdown" onAction="#setSelections" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </ComboBox>
-                  <ComboBox fx:id="countySheriffDropdown" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                  <ComboBox fx:id="countySheriffDropdown" onAction="#setSelections" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
