--- a/CountyAuditor/src/countyAuditor.fxml
+++ b/CountyAuditor/src/countyAuditor.fxml
@@ -61,12 +61,12 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
          <children>
-            <TextField id="cityField" fx:id="cityField">
+            <TextField id="cityField" fx:id="cityField" promptText="County">
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
             </TextField>
-            <ComboBox id="stateDropdown" fx:id="stateDropdown" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+            <ComboBox id="stateDropdown" fx:id="stateDropdown" prefWidth="150.0" promptText="State" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
