--- a/VoterBallot/src/voterBallot.fxml
+++ b/VoterBallot/src/voterBallot.fxml
@@ -36,7 +36,7 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <ComboBox fx:id="presidentDropdown" onAction="#setSelections" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                  <ComboBox fx:id="presidentDropdown" onAction="#setSelections" prefWidth="250.0" promptText="Not Selected" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
@@ -187,42 +187,42 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <Text fx:id="presidentSelection" strokeType="OUTSIDE" strokeWidth="0.0" text="Not Selected" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                  <Text fx:id="presidentSelection" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text fx:id="usSenateSelection" layoutX="420.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Not Selected" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                  <Text fx:id="usSenateSelection" layoutX="420.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text fx:id="usHouseSelection" strokeType="OUTSIDE" strokeWidth="0.0" text="Not Selected" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                  <Text fx:id="usHouseSelection" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text fx:id="governorSelection" strokeType="OUTSIDE" strokeWidth="0.0" text="Not Selected" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                  <Text fx:id="governorSelection" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text fx:id="stateSenateSelection" strokeType="OUTSIDE" strokeWidth="0.0" text="Not Selected" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                  <Text fx:id="stateSenateSelection" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text fx:id="stateHouseSelection" strokeType="OUTSIDE" strokeWidth="0.0" text="Not Selected" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5">
+                  <Text fx:id="stateHouseSelection" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text fx:id="countyJudgeSelection" strokeType="OUTSIDE" strokeWidth="0.0" text="Not Selected" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+                  <Text fx:id="countyJudgeSelection" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text fx:id="countySheriffSelection" strokeType="OUTSIDE" strokeWidth="0.0" text="Not Selected" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="7">
+                  <Text fx:id="countySheriffSelection" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="7">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
