--- a/VoterBallot/src/voterBallot.fxml
+++ b/VoterBallot/src/voterBallot.fxml
@@ -36,7 +36,7 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <ComboBox fx:id="presidentDropdown" onAction="#setSelections" prefWidth="250.0" promptText="Not Selected" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                  <ComboBox fx:id="presidentDropdown" onAction="#setSelections" prefWidth="250.0" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
