--- a/CountyAuditor/src/countyAuditor.fxml
+++ b/CountyAuditor/src/countyAuditor.fxml
@@ -23,7 +23,7 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
       </Label>
-      <Label text="County/State" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+      <Label text="Zip Code/State" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
@@ -55,7 +55,7 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
          <children>
-            <TextField id="cityField" fx:id="cityField" promptText="County">
+            <TextField id="cityField" fx:id="zipField" promptText="Zip">
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
