--- a/VoterRegistration/src/voterRegistration.fxml
+++ b/VoterRegistration/src/voterRegistration.fxml
@@ -75,7 +75,7 @@
             </ComboBox>
          </children>
       </GridPane>
-      <Button fx:id="registerButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" text="Register" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+      <Button fx:id="registerButton" mnemonicParsing="false" onAction="#processRegister" prefHeight="25.0" prefWidth="200.0" text="Register" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
