--- a/CountyAuditor/src/countyAuditor.fxml
+++ b/CountyAuditor/src/countyAuditor.fxml
@@ -25,7 +25,7 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
       </Label>
-      <Label text="Zip Code/State" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+      <Label text="Zip Code/State:" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
@@ -57,12 +57,12 @@
             <Insets />
          </GridPane.margin>
          <children>
-            <TextField id="cityField" fx:id="zipField" promptText="Zip Code">
+            <TextField id="cityField" fx:id="zipField">
                <GridPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
             </TextField>
-            <ComboBox id="stateDropdown" fx:id="stateDropdown" prefWidth="100.0" promptText="State" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+            <ComboBox id="stateDropdown" fx:id="stateDropdown" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                <GridPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
