--- a/VotesResults/src/votesResults.fxml
+++ b/VotesResults/src/votesResults.fxml
@@ -5,15 +5,15 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VotesResultsController">
   <tabs>
-    <Tab id="federal" text="Federal">
+    <Tab id="federal" fx:id="federal" text="Federal">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <ChoiceBox id="federalRep" layoutX="14.0" layoutY="14.0" prefWidth="150.0" />
-                  <TextField id="federalYearBox" layoutX="171.0" layoutY="14.0" prefHeight="30.0" prefWidth="52.0" promptText="Year" />
-                  <Slider id="federalYearSlider" layoutX="230.0" layoutY="21.0" prefHeight="18.0" prefWidth="94.0" />
+                  <ChoiceBox id="federalRep" fx:id="federalOffice" layoutX="14.0" layoutY="14.0" prefWidth="150.0" />
+                  <TextField id="federalYearBox" fx:id="federalYearBox" layoutX="171.0" layoutY="14.0" prefHeight="30.0" prefWidth="52.0" promptText="Year" />
+                  <Slider id="federalYearSlider" fx:id="federalYearSlider" layoutX="230.0" layoutY="21.0" prefHeight="18.0" prefWidth="94.0" />
                   <StackedBarChart id="federalChart" layoutX="15.0" layoutY="62.0" prefHeight="285.0" prefWidth="571.0">
                     <xAxis>
                       <CategoryAxis side="BOTTOM" />
@@ -26,13 +26,13 @@
                </children></AnchorPane>
       </content>
     </Tab>
-    <Tab id="state" text="State">
+    <Tab id="state" fx:id="state" text="State">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <ChoiceBox id="stateChoice" layoutX="14.0" layoutY="14.0" prefWidth="150.0" />
-                  <Slider id="stateYearSlider" layoutX="386.0" layoutY="21.0" prefHeight="18.0" prefWidth="94.0" />
-                  <TextField id="stateYearBox" layoutX="327.0" layoutY="14.0" prefHeight="20.0" prefWidth="53.0" promptText="Year" />
+                  <ChoiceBox id="stateChoice" fx:id="stateChoice" layoutX="14.0" layoutY="14.0" prefWidth="150.0" />
+                  <Slider id="stateYearSlider" fx:id="stateYearSlider" layoutX="386.0" layoutY="21.0" prefHeight="18.0" prefWidth="94.0" />
+                  <TextField id="stateYearBox" fx:id="stateYearBox" layoutX="327.0" layoutY="14.0" prefHeight="20.0" prefWidth="53.0" promptText="Year" />
                   <StackedBarChart id="stateChart" layoutX="15.0" layoutY="62.0" prefHeight="285.0" prefWidth="571.0">
                     <xAxis>
                       <CategoryAxis side="BOTTOM" />
@@ -41,12 +41,12 @@
                       <NumberAxis side="LEFT" />
                     </yAxis>
                   </StackedBarChart>
-                  <ChoiceBox id="stateRep" layoutX="170.0" layoutY="14.0" prefWidth="150.0" />
+                  <ChoiceBox id="stateRep" fx:id="stateOffice" layoutX="170.0" layoutY="14.0" prefWidth="150.0" />
                   <Label id="stateError" layoutX="480.0" layoutY="19.0" prefHeight="23.0" prefWidth="110.0" textFill="RED" />
                </children></AnchorPane>
       </content>
     </Tab>
-      <Tab id="county" text="County">
+      <Tab id="county" fx:id="county" text="County">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
