--- a/VotesResults/src/votesResults.fxml
+++ b/VotesResults/src/votesResults.fxml
@@ -11,8 +11,8 @@
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <TextField id="federalYearBox" fx:id="federalYearBox" layoutX="171.0" layoutY="15.0" prefHeight="30.0" prefWidth="52.0" promptText="Year" />
-                  <Slider id="federalYearSlider" fx:id="federalYearSlider" layoutX="230.0" layoutY="22.0" prefHeight="18.0" prefWidth="94.0" />
+                  <TextField id="federalYearBox" fx:id="federalYearBox" layoutX="122.0" layoutY="15.0" prefHeight="30.0" prefWidth="52.0" promptText="Year" />
+                  <Slider id="federalYearSlider" fx:id="federalYearSlider" layoutX="183.0" layoutY="22.0" prefHeight="18.0" prefWidth="94.0" />
                   <StackedBarChart id="federalBarChart" layoutX="15.0" layoutY="62.0" prefHeight="285.0" prefWidth="488.0">
                     <xAxis>
                       <CategoryAxis side="BOTTOM" />
@@ -22,7 +22,7 @@
                     </yAxis>
                   </StackedBarChart>
                   <Label id="federalError" layoutX="480.0" layoutY="19.0" prefHeight="23.0" prefWidth="110.0" textFill="RED" />
-                  <ComboBox id="federalOffice" layoutX="14.0" layoutY="15.0" prefWidth="150.0" />
+                  <ComboBox id="federalOffice" layoutX="14.0" layoutY="15.0" prefHeight="31.0" prefWidth="98.0" />
                   <PieChart id="federalPieChart" layoutX="148.0" layoutY="66.0" prefHeight="278.0" prefWidth="306.0" />
                   <LineChart id="federalLineChart" layoutX="15.0" layoutY="62.0" prefHeight="285.0" prefWidth="488.0">
                     <xAxis>
@@ -97,8 +97,9 @@
                     </yAxis>
                   </LineChart>
                   <PieChart id="countyPieChart" layoutX="148.0" layoutY="66.0" prefHeight="278.0" prefWidth="306.0" />
-                  <RadioButton layoutX="490.0" layoutY="101.0" mnemonicParsing="false" text="RadioButton" />
-                  <RadioButton layoutX="490.0" layoutY="136.0" mnemonicParsing="false" text="RadioButton" />
+                  <RadioButton id="countyBarButton" layoutX="512.0" layoutY="120.0" mnemonicParsing="false" text="Bar" />
+                  <RadioButton id="countyLineButton" layoutX="512.0" layoutY="147.0" mnemonicParsing="false" text="Line" />
+                  <RadioButton id="countyPieButton" layoutX="512.0" layoutY="174.0" mnemonicParsing="false" text="Pie" />
                </children>
             </AnchorPane>
         </content>
